<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BaGi</string>

    <string name="error_empty_name">Please insert your name</string>
    <string name="error_empty_phone">Please insert your phone</string>
    <string name="error_empty_username">Please insert your username</string>
    <string name="error_empty_email">Please insert your email</string>
    <string name="error_invalid_email">The email is invalid</string>
    <string name="error_empty_password">Please insert your password</string>
    <string name="label_is_have_account">Already have an account ?</string>
    <string name="error_password_more_8">Password must more than 8 character</string>

    <string name="title_onboard_1">App for sharing used goods</string>
    <string name="desc_onboard_1">This application is useful for channeling goods that are no longer used to be reused by others</string>
    <string name="title_onboard_2">Sharing is wonderful</string>
    <string name="desc_onboard_2">Used goods that are still suitable for use are better distributed to people in need, to be reused.</string>
    <string name="title_onboard_3">Enjoy the app to share with each other</string>
    <string name="desc_onboard_3">Please register your account to be able to use this application !</string>
    <string name="onboard_next">Next</string>
    <string name="onboard_started">Get Started</string>

    <string name="label_login_welcome_desc">Please login so you can enjoy the full experience</string>
    <string name="action_to_register">Register here</string>
    <string name="label_register_welcome_desc">Register yourself using the BaGi application</string>
    <string name="action_to_login">Login here</string>

    <string name="action_register">Sign up</string>

    <string name="label_nama">Full Name</string>
    <string name="label_btn_login">Sign in</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_welcome">Sign In</string>
    <string name="label_is_havent_account">Don\'t have an account ?</string>

    <string name="label_register">Please create your account!</string>
    <string name="label_no_hp">Phone Number</string>
    <string name="label_username">Username</string>
    <string name="label_confirmation_password">Confirmation Password</string>
    <string name="title_home">Home</string>
    <string name="title_myitem">MyItem</string>
    <string name="title_profile">Profile</string>
    <string name="title_upload">Upload</string>

    <string name="login_success_message">Login Success</string>
    <string name="login_error_message">Login Failed</string>
    <string name="registration_success_message">Register Success</string>
    <string name="registration_error_message">Register Failed</string>
    <string name="search">Search</string>
    <string name="items_description" translatable="false">Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsu....</string>

    <string name="no_data">No Data</string>
    <string name="items_not_found_error">Items Not Found</string>
    <string name="message_unknown_state">Unknown State</string>
    <string name="action_retry">Retry</string>
    <string name="message_error_items" translatable="false">Items not found</string>
    <string name="text_user_bagi">BaGi User</string>
    <string name="btn_request">Request This Item</string>
    <string name="text_edit">Edit</string>

    <string name="content_description_back_button">Back Button</string>
    <string name="hint_no_hp_anda">Your Phone Number</string>
    <string name="content_description_image">Image</string>
    <string name="text_approve_page">Approve Page</string>
    <string name="text_update">Update</string>
    <string name="hint_alamat">Your Address</string>
    <string name="text_alamat">Address</string>
    <string name="text_no_hp">Phone Number</string>
    <string name="hint_email_anda">Your Email</string>
    <string name="text_email">Email</string>
    <string name="hint_username_anda">Your Username</string>
    <string name="text_username">Username</string>
    <string name="text_change_picture">Change Pictures</string>
    <string name="text_informasi_dasar">Baseline Information</string>
    <string name="action_logout">Logout</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_message">Information</string>
    <string name="message_logout_confirm">Are you sure want to logout ?</string>
    <string name="button_capture">Capture Button</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="message_failed_take_picture">Failed to Take a Picture</string>
    <string name="message_failed_camera">Failed to Bring up The Camera</string>
    <string name="message_not_permitted">Permission Not Granted</string>
    <string name="hint_input_your_email">Input Your Email</string>
    <string name="hint_input_your_password">Input Your Password</string>
    <string name="hint_input_your_name">Input Your Name</string>
    <string name="hint_input_your_phone">Input Your Phone Number</string>
    <string name="hint_input_your_username">Input Your Username</string>
    <string name="label_description">Description</string>
    <string name="message_succes_updates">Successful Updates</string>
    <string name="message_failed_updates">Update Failed</string>
    <string name="message_succes_upload">Upload Successful</string>
    <string name="message_failed_upload">Upload Failed</string>
    <string name="message_pick_image">Pick an image</string>
    <string name="message_failed_login">Incorrect Email or Password</string>

    <string name="message_item_torn">"The item you are using is damaged, it cannot be uploaded to this application, please find a suitable item."</string>
    <string name="warning_upload_photo">Note: Make sure your item is usable, because this page can detect the feasibility of your item!</string>
    <string name="label_title">Title</string>
    <string name="input_your_title">Input Your Title</string>
    <string name="label_kategori">Category</string>
    <string name="hint_input_your_description">Input Your Description</string>
    <string name="hint_input_your_kategori">Input Your Category</string>
    <string name="input_your_location">Input Your Location</string>
    <string name="result_layak">Your Item is Worth</string>
    <string name="result_tidak_layak">Your Item is Not Worth It</string>
    <string name="detaiLphoto_items">Item Photos</string>
    <string name="btn_select_image">Select Image</string>
    <string name="btn_update">Update</string>
    <string name="title_what_shared">What can be shared?</string>
    <string name="label_shirt">Shirt</string>
    <string name="label_sneakers">Shoe</string>
    <string name="label_bag">Bag</string>
    <string name="your_item">this item is yours</string>
    <string name="description_error">Descriptions cannot be longer than 255 characters</string>
    <string name="message_wa_notfound">WhatsApp number not found</string>
    <string name="message_email_emphty">Email cannot be empty</string>
    <string name="message_pw_empghty">Password cannot be emphty</string>
    <string name="message_register_emphty">all data must be filled in</string>
</resources>