<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_menu_nav_graph"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rondi.bagiapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_upload"
        android:name="com.rondi.bagiapp.ui.upload.UploadFragment"
        android:label="@string/title_upload"
        tools:layout="@layout/fragment_upload" >

    <action
        android:id="@+id/action_navigation_upload_to_navigation_home"
        app:destination="@id/navigation_home"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:launchSingleTop="false"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_myitem"
        android:name="com.rondi.bagiapp.ui.myitem.MyItemFragment"
        android:label="@string/title_myitem"
        tools:layout="@layout/fragment_myitem" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.rondi.bagiapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>