<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment"
    android:background="@drawable/login_fix">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/bg_dim"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:elevation="@dimen/dimen_4dp"
            android:visibility="gone" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_login"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/logo_bagi"
            android:layout_marginTop="@dimen/dimen_32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvWelcomeTitle"
            android:text="@string/label_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_24sp"
            android:textColor="@color/primary"
            android:layout_marginStart="@dimen/dimen_16dp"
            style="@style/TextContent.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_login"/>

        <TextView
            android:id="@+id/tvWelcomeDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/label_login_welcome_desc"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcomeTitle"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvEmailTitle"
            style="@style/TextContent.Medium"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:text="@string/label_email"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcomeDesc" />

        <com.rondi.bagiapp.ui.customview.CustomEmailEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_edit_text"
            android:inputType="textEmailAddress"
            android:padding="@dimen/dimen_16dp"
            android:translationZ="0dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/dimen_8dp"
            android:hint="@string/hint_input_your_email"
            android:elevation="@dimen/dimen_4dp"
            app:layout_constraintTop_toBottomOf="@id/tvEmailTitle"
            tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/tvPasswordTitle"
            style="@style/TextContent.Medium"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/label_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_login_email" />

        <com.rondi.bagiapp.ui.customview.CustomPasswordEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:background="@drawable/bg_edit_text"
            android:inputType="textPassword"
            android:padding="@dimen/dimen_16dp"
            android:hint="@string/hint_input_your_password"
            android:drawablePadding="@dimen/dimen_8dp"
            android:drawableStart="@drawable/ic_password"
            android:translationZ="0dp"
            android:elevation="@dimen/dimen_4dp"
            app:layout_constraintTop_toBottomOf="@id/tvPasswordTitle"
            tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize"
            tools:layout_editor_absoluteX="16dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:text="@string/label_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:translationZ="0dp"
            android:background="@drawable/bg_button"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/ed_login_password"
            app:layout_constraintEnd_toEndOf="@id/ed_login_password"
            app:layout_constraintTop_toBottomOf="@+id/ed_login_password"
            tools:ignore="VisualLintButtonSize" />

        <LinearLayout
            android:id="@+id/layoutTextRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin">

            <TextView
                android:id="@+id/tvIsHaventAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_is_havent_account"/>

            <TextView
                android:id="@+id/tvToRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:layout_marginStart="@dimen/dimen_4dp"
                android:text="@string/action_to_register"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:elevation="@dimen/dimen_6dp"
            android:progressTint="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>