<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg"
    tools:context=".ui.home.HomeFragment">

    <EditText
        android:id="@+id/search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="@dimen/dimen_4dp"
        android:hint="@string/search"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="@dimen/dimen_8dp"
        app:layout_constraintEnd_toStartOf="@id/filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <ImageView
        android:id="@+id/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:contentDescription="@string/search"
        android:src="@drawable/ic_filter"
        app:layout_constraintBottom_toBottomOf="@id/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/search" />

    <TextView
        android:id="@id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:text="What can be shared?"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter" />

    <ImageView
        android:id="@+id/image1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@drawable/bg_edit_text"
        android:elevation="@dimen/dimen_16dp"
        android:padding="@dimen/dimen_16dp"
        android:src="@drawable/shirt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@drawable/bg_edit_text"
        android:elevation="@dimen/dimen_16dp"
        android:padding="@dimen/dimen_16dp"
        android:src="@drawable/sneakers"
        app:layout_constraintStart_toEndOf="@id/image1"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageView
        android:id="@+id/image3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@drawable/bg_edit_text"
        android:elevation="@dimen/dimen_16dp"
        android:padding="@dimen/dimen_16dp"
        android:src="@drawable/bag"
        app:layout_constraintStart_toEndOf="@id/image2"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/titleShirt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="Shirt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/image1"
        app:layout_constraintStart_toStartOf="@id/image1"
        app:layout_constraintTop_toBottomOf="@id/image1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="Sneakers"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/image2"
        app:layout_constraintStart_toStartOf="@id/image2"
        app:layout_constraintTop_toBottomOf="@id/image2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="Bag"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/image3"
        app:layout_constraintStart_toStartOf="@id/image3"
        app:layout_constraintTop_toBottomOf="@id/image3"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/titleShirt"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@color/white"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_items"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/layout_items"/>


    <ImageView
        android:id="@+id/iv_not_found_error"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:alpha="0"
        android:contentDescription="@string/no_data"
        android:src="@drawable/ilustration_no_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_not_found_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:alpha="0"
        android:text="@string/items_not_found_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_not_found_error" />


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dimen_6dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>